--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
     "deploy": "gh-pages -d dist"
   },
   "dependencies": {
+    "email-validator": "^2.0.4",
     "firebase": "^9.8.4",
     "gh-pages": "^4.0.0",
     "prop-types": "^15.8.1",
