--- a/package.json
+++ b/package.json
@@ -1,35 +1,42 @@
 {
-  "name": "digital-contactbook",
-  "private": true,
-  "version": "0.0.0",
-  "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
-  },
-  "homepage": "https://contactbookwithusers.netlify.app/",
-  "dependencies": {
-    "email-validator": "^2.0.4",
-    "firebase": "^9.8.4",
-    "prop-types": "^15.8.1",
-    "react": "^18.0.0",
-    "react-dom": "^18.0.0",
-    "react-icons": "^4.4.0",
-    "react-js-loader": "^0.1.0",
-    "react-router-dom": "^6.3.0",
-    "styled-components": "^5.3.5"
-  },
-  "devDependencies": {
-    "@originjs/vite-plugin-commonjs": "^1.0.3",
-    "@types/react": "^18.0.0",
-    "@types/react-dom": "^18.0.0",
-    "@vitejs/plugin-react": "^1.3.0",
-    "eslint": "^8.18.0",
-    "eslint-config-airbnb": "^19.0.4",
-    "eslint-plugin-import": "^2.26.0",
-    "eslint-plugin-jsx-a11y": "^6.6.0",
-    "eslint-plugin-react": "^7.30.1",
-    "eslint-plugin-react-hooks": "^4.6.0",
-    "vite": "^2.9.9"
-  }
+	"name": "digital-contactbook",
+	"private": true,
+	"version": "0.0.0",
+	"scripts": {
+		"dev": "vite",
+		"build": "vite build",
+		"preview": "vite preview",
+		"test": "vitest"
+	},
+	"homepage": "https://contactbookwithusers.netlify.app/",
+	"dependencies": {
+		"@testing-library/jest-dom": "^5.16.4",
+		"@testing-library/react": "^13.3.0",
+		"email-validator": "^2.0.4",
+		"firebase": "^9.8.4",
+		"jest-styled-components": "^7.0.8",
+		"jsdom": "^20.0.0",
+		"prop-types": "^15.8.1",
+		"react": "^18.0.0",
+		"react-dom": "^18.0.0",
+		"react-icons": "^4.4.0",
+		"react-js-loader": "^0.1.0",
+		"react-router-dom": "^6.3.0",
+		"styled-components": "^5.3.5",
+		"vitest": "^0.18.1"
+	},
+	"devDependencies": {
+		"@originjs/vite-plugin-commonjs": "^1.0.3",
+		"@types/react": "^18.0.0",
+		"@types/react-dom": "^18.0.0",
+		"@vitejs/plugin-react": "^1.3.0",
+		"c8": "^7.12.0",
+		"eslint": "^8.18.0",
+		"eslint-config-airbnb": "^19.0.4",
+		"eslint-plugin-import": "^2.26.0",
+		"eslint-plugin-jsx-a11y": "^6.6.0",
+		"eslint-plugin-react": "^7.30.1",
+		"eslint-plugin-react-hooks": "^4.6.0",
+		"vite": "^2.9.14"
+	}
 }
