--- a/package.json
+++ b/package.json
@@ -37,6 +37,7 @@
 		"eslint-plugin-jsx-a11y": "^6.6.0",
 		"eslint-plugin-react": "^7.30.1",
 		"eslint-plugin-react-hooks": "^4.6.0",
+		"msw": "^0.44.2",
 		"vite": "^2.9.14"
 	}
 }
